testing redesign - fixed spacing layering

--- a/test/stylesheet.css
+++ b/test/stylesheet.css
@@ -118,8 +118,9 @@ body, html
 	margin:0;
 	height:20vh;
 	width: 100%;
-	background-color: #151416;
+	background: #151416;
 	z-index: 10;
+	position: relative;
 }
 .fullscreen
 {
@@ -310,7 +311,7 @@ p.download
 
 .footer
 {
-	padding: 0;
+	padding: 0 0 1px;
 	width: 100%;
 	height: 50px;
 	margin: 0;
